Note that the collapse has crazy bug. somehow the recursive function dose not opreate as planed its in the process of debugging. now it returns this crazy graph instead of the collapsed one.. ;)

--- a/glimpse/css/planar.css
+++ b/glimpse/css/planar.css
@@ -33,6 +33,7 @@ planar-view svg {
     font-weight: bold;
 }
 
+
 .node_selected circle {
     stroke-opacity: .9;
     fill: #fcbe28;
@@ -51,6 +52,21 @@ planar-view svg {
 
 .node_selected:hover text {
     font-weight: bold;
+}
+
+.collapsed circle {
+    stroke: #424242;
+    stroke-opacity: 1;
+    fill: #28b6ca;
+    stroke-width: 4px;
+    cursor: pointer;
+}
+
+.collapsed:hover circle {
+    stroke-opacity: 1;
+    fill: #28b6ca;
+    stroke-width: 4px;
+    cursor: pointer;
 }
 
 .link {
